--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <div class="sidebar" >
           <div class="inner-sidebar">
-            <a class="reference" href='#' id='Jesse'>Jesse Pinkman</a>
+            <a class="reference" href='#?req=Jesse&btn=1' id='Jesse'>Jesse Pinkman</a>
           </div>
           <hr>
           <div class="inner-sidebar">
